package registry

import (
	"fmt"
	"sync"
	"time"

	fluidv1 "github.com/aspectrr/fluid.sh/proto/gen/go/fluid/v1"
)

// HostStream is the interface for sending control messages to a connected host.
// It abstracts the underlying gRPC server-side stream so the registry does not
// depend on gRPC internals directly.
type HostStream interface {
	Send(msg *fluidv1.ControlMessage) error
}

// ConnectedHost represents a sandbox host that is actively connected to the
// control plane via a bidirectional gRPC stream.
type ConnectedHost struct {
	HostID        string
	Hostname      string
	Stream        HostStream
	LastHeartbeat time.Time
	Registration  *fluidv1.HostRegistration
}

// Registry tracks all currently connected sandbox hosts in memory.
// It is safe for concurrent use.
type Registry struct {
	mu    sync.RWMutex
	hosts map[string]*ConnectedHost
}

// New creates an empty host registry.
func New() *Registry {
	return &Registry{
		hosts: make(map[string]*ConnectedHost),
	}
}

// Register adds or replaces a connected host in the registry.
// If a host with the same ID is already registered, it is replaced (the
// previous stream is not closed - the caller is responsible for cleanup).
func (r *Registry) Register(hostID, hostname string, stream HostStream) error {
	if hostID == "" {
		return fmt.Errorf("host ID must not be empty")
	}
	if stream == nil {
		return fmt.Errorf("stream must not be nil")
	}

	r.mu.Lock()
	defer r.mu.Unlock()

	r.hosts[hostID] = &ConnectedHost{
		HostID:        hostID,
		Hostname:      hostname,
		Stream:        stream,
		LastHeartbeat: time.Now(),
	}
	return nil
}

// Unregister removes a host from the registry.
func (r *Registry) Unregister(hostID string) {
	r.mu.Lock()
	defer r.mu.Unlock()
	delete(r.hosts, hostID)
}

// GetHost returns the connected host for the given ID, if present.
func (r *Registry) GetHost(hostID string) (*ConnectedHost, bool) {
	r.mu.RLock()
	defer r.mu.RUnlock()
	h, ok := r.hosts[hostID]
	return h, ok
}

// ListConnected returns a snapshot of all currently connected hosts.
func (r *Registry) ListConnected() []*ConnectedHost {
	r.mu.RLock()
	defer r.mu.RUnlock()

	result := make([]*ConnectedHost, 0, len(r.hosts))
	for _, h := range r.hosts {
		result = append(result, h)
	}
	return result
}

// SetRegistration updates the registration info and heartbeat for a host
// that is already in the registry.
func (r *Registry) SetRegistration(hostID string, reg *fluidv1.HostRegistration) {
	r.mu.Lock()
	defer r.mu.Unlock()
	if h, ok := r.hosts[hostID]; ok {
		h.Registration = reg
		h.LastHeartbeat = time.Now()
	}
}

// UpdateHeartbeat records the latest heartbeat time for a connected host.
func (r *Registry) UpdateHeartbeat(hostID string) {
	r.mu.Lock()
	defer r.mu.Unlock()
	if h, ok := r.hosts[hostID]; ok {
		h.LastHeartbeat = time.Now()
	}
}

// SelectHostForImage finds a connected host that advertises the given base
// image in its registration data. Returns an error if no suitable host is found.
func (r *Registry) SelectHostForImage(baseImage string) (*ConnectedHost, error) {
	r.mu.RLock()
	defer r.mu.RUnlock()

	for _, h := range r.hosts {
		if h.Registration == nil {
			continue
		}
		for _, img := range h.Registration.GetBaseImages() {
			if img == baseImage {
				return h, nil
			}
		}
	}
	return nil, fmt.Errorf("no connected host has base image %q", baseImage)
}
